@startuml
  hide empty members
  set namespaceseparator none
  class "Espadachin" << (C, lightblue) >>
  class "Guerrero" << (C, lightblue) >>
  class "Atacante" << (M, orchid) mixin >>
  "Atacante" : {method} ataque
  "Atacante" : {method} atacar_a(otro)
  class "Defensor" << (M, orchid) mixin >>
  "Defensor" <|-.- "Guerrero"
  "Atacante" <|-.- "Guerrero"
  "Guerrero" <|-- "Espadachin"
  class "el zorro" << (O, white) object >>
  "Espadachin" <-- "el zorro"
@enduml
